# SLAI

./: CMakeLists.txt  LICENSE  Lexer.h  README.md  Source.cpp  assembler_interpreter.sln  assembler_interpreter.vcxproj  assembler_interpreter.vcxproj.filters  interpreter.cpp  interpreter.h  main.cpp  test.asm  token.cpp  token.h
examples/: elements_sum.asm  factorial.asm  fahrenheit.asm  fibonacci.asm
includes/: freader.h  interpreter.h  lexer.h  token.h  variable.h
src/: interpreter.cpp  lexer.cpp  main.cpp  token.cpp
